Version 0.8.7~dev

	* Add more debugging output.
	* Rename threads of the ThreadPool per plugin for easier log reading.

Version 0.8.6 Released on 2011/03/18

	* Always try to commit results, closes: #3759.

Version 0.8.5 Released on 2011/01/13

	* Set default check_poll to 60, closes: #3336.
	* New fix for race condition causing duplicate
	  logging output, closes: #3202.
	* Reduce verbosity for exceptions derived from BaseJobRuntimeError,
	  refs: #3415.
	* Add BaseJob.BaseError to reduce verbosity of derived exceptions,
	  closes: #3415.
	* Deprecate set_check_status and except checks to return their status.
	* Try to import python2.6's LoggerAdapter before the one from sjutils.
	* Make BaseJob derive from new style python objects.
	* Use logging.exception for traceback logging.
	* Fix backward compatibility of set_check_status deprecation.
	* Discard results that failed to commit, closes: #3838.
	* Disable deprecation warnings for current release, refs: #3838.

Version 0.8.4 Released on 2010/10/04

	* Fix race condition which causes double/triple logging output,
	  closes: #3532.
	* sjconf: read all [spvd:*] sections, not just [spvd], closes #3498.
	* Do not provide spv-inject since it moved to webengine-spv module.
	* Do not stop daemon on extra configuration section presence.
	* Simplify configuration parsing code, refs: #3308.
	* Catch plugins not declaring optional parameters, refs: #3308.
	* Move optional default parameters to BasePlugin, closes: #3070 and
	  refs: #3308.
	* Make plugin configuration inheritance work again, closes: #3308.

Version 0.8.3 Released on 2010/07/07

	* Add a SJConf plugin, closes: #3304.

Version 0.8.2 Released on 2010/07/02

	* sample: plugin updated with new API, closes: #2984.
	* sample: add alternate plugin using getattr.
	* Change logrotate options for rotating daily and keep 30 days of logs,
	  closes: #3147.
	* basejob: Protected code against null values.
	* basejob: fix crash on first run of a specific job